--- a/static/sass/_fonts.sass
+++ b/static/sass/_fonts.sass
@@ -2,4 +2,4 @@
 
 +font-face("PTSansCaption", "../fonts/PTSansCaption/PTSansCaption")
 +font-face("Lora", "../fonts/Lora/Lora")
-
++font-face("Museosanscyrl", "../fonts/museosanscyrl/Museosanscyrl500")
