--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,14 +9,12 @@
   <div class="bg"></div>
   <div class="wrapper">
     {{>header}}
-    {{!-- <h1>Личностная трансформация</h1> --}}
-    <h1>ТЕСТИРУЕМ RAM</h1>
+    <h1>Личностная трансформация</h1>
     <br>
     <div class="header-text">
       <p>Если ты жаждешь глубинной трансформации, этот ресурс поможет тебе. Раз ты здесь, значит, готов к переменам и
         открыт для нового.
-        Рост счастья и состояние наполненности от простого бытия меняет даже мрачную реальность. Сама возможность <span
-          class="accent-color">Быть</span>
+        Рост счастья и состояние наполненности от простого бытия меняет даже мрачную реальность. Сама возможность Быть
         уже является большим чудом и счастьем. Постигшему эту истину раскрывается мир неограниченных возможностей.
         Хоть на секунду притормози и пристально посмотри на того, кто задыхается в серой реальности, кто не находит себя
         в этом мире. Может, это вовсе не ты? Давай вместе попробуем заглянуть внутрь измученной оболочки, стать ближе к
@@ -27,7 +25,7 @@
       </p>
     </div>
 
-    <h2>Афоризмы</h2>
+    {{!-- <h2>Афоризмы</h2>
     <section class="aphorisms-container">
       {{#each aphorisms}}
       <div class="aphorisms-item">
@@ -47,7 +45,7 @@
       {{/each}}
 
     </section>
-    <h2>Аффирмации</h2>
+    <h2>Аффирмации</h2> --}}
   </div>
   {{>footer}}
 </body>
