test telegram bot

--- a/static/sass/main.sass
+++ b/static/sass/main.sass
@@ -43,10 +43,13 @@ select#filter-by-author
   -webkit-padding-end: 20px
   -webkit-padding-start: 2px
   background-image: url('../img/customSelect.png'), -webkit-linear-gradient(#fafafa, #f4f4f4 40%, #e5e5e5)
+  background: #211974
   background-position: 97% center
   background-repeat: no-repeat
-  border: 1px solid #aaa
-  color: #555
+  border: none
+  border-bottom: 1px solid #7a75ac
+
+  color: white
   font-size: inherit
   margin: 10px
   overflow: hidden
@@ -179,6 +182,9 @@ select#filter-by-author
   width: 304px
   height: 345px
   padding: 20px
+  font-size: 10px
+  line-height: 16px
+  text-transform: uppercase
 
 .shuffle-button
 
