--- a/views/contacts.hbs
+++ b/views/contacts.hbs
@@ -6,16 +6,15 @@
 </head>
 
 <body>
+  <div class="bg"></div>
   <div class="wrapper">
     {{>header}}
 
-    <div class="about">
-      <p>Если у вас есть идеи по улучшению данного ресурса или организации нового проекта, напишите мне пожалуйста. Это
-        будет ценным вкладом с вашей
-        стороны.</p>
-    </div>
+    <h1>Если у вас есть идеи по улучшению данного ресурса или организации нового проекта, напишите мне пожалуйста. Это
+      будет ценным вкладом с вашей
+      стороны.</h1>
 
-    <h2>Контакты</h2>
+    <h2 class="page-contact">Контакты</h2>
 
     <div class="contacts">
       <a href="https://vk.com/medonomator">
