--- a/static/sass/main.sass
+++ b/static/sass/main.sass
@@ -18,6 +18,14 @@ h1
 select, input
   outline: none
 
+option
+  background: white
+  color: black
+
+select
+  color: rgba(0,0,0,0)
+  text-shadow: 0 0 0 #000
+
 h2
   font-size: 20px
   text-transform: uppercase
@@ -38,26 +46,21 @@ select#filter-by-categories,
 select#filter-by-topic,
 select#filter-by-author
   -webkit-appearance: button
-  border-radius: 2px
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1)
-  -webkit-padding-end: 20px
-  -webkit-padding-start: 2px
   background-image: url('../img/customSelect.png'), -webkit-linear-gradient(#fafafa, #f4f4f4 40%, #e5e5e5)
   background: #211974
   background-position: 97% center
   background-repeat: no-repeat
   border: none
   border-bottom: 1px solid #7a75ac
-
   color: white
-  font-size: inherit
-  margin: 10px
-  overflow: hidden
-  padding: 5px 10px
   text-overflow: ellipsis
   white-space: nowrap
   width: 250px
-  margin-right: 40px
+  padding: 15px 0
+  font-size: 18px
+  font-weight: 300
+  margin-bottom: 30px
+  cursor: pointer
 
 .bg
   background: url('../img/whale.png') no-repeat
@@ -77,6 +80,22 @@ select#filter-by-author
   width: 1170px
   position: relative
   min-height: 100vh
+
+.half-container
+  margin-right: 50%
+
+.button
+  border: none
+  background: #3753E7
+  font-size: 18px
+  line-height: 26px
+  font-weight: 600
+  color: white
+  text-transform: uppercase
+  transition: all .3s ease
+  cursor: pointer
+  &:hover
+    background: darken(#3753E7, 5%)
 
 /*** header  ***/
 .header
@@ -111,7 +130,7 @@ select#filter-by-author
 
 .header-text
   color: white
-  padding-top: 20px
+  padding-top: 40px
   font-size: 16px
   line-height: 26px
   margin-right: 400px
@@ -121,6 +140,9 @@ select#filter-by-author
   margin-top: 150px
 
 /*** aphorisms  ***/
+.aphorisms-container
+  position: relative
+
 .aphorisms
   &-item
     background: #FFFFFF
@@ -128,6 +150,7 @@ select#filter-by-author
     border-radius: 2px
     margin-bottom: 24px
     padding: 16px 20px
+    margin-right: 30px
 
   &-item-body
     p
@@ -176,17 +199,27 @@ select#filter-by-author
 
 .filter-block
   background: #211974
-  margin-left: 20px
   border-radius: 2px
   color: white
   width: 304px
-  height: 345px
+  height: 385px
   padding: 20px
   font-size: 10px
   line-height: 16px
   text-transform: uppercase
+  margin-left: auto
+
+  &-item
+    p
+      font-size: 12px
+      line-height: 16px
+      text-transform: uppercase
+      font-weight: 600
 
 .shuffle-button
+  width: 264px
+  height: 48px
+  @extend .button
 
 /** Loader ***/
 .lds-ring
@@ -211,7 +244,7 @@ select#filter-by-author
     border: 6px solid #636363
     border-radius: 50%
     animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite
-    border-color: #636363 transparent transparent transparent
+    border-color: #211874 transparent transparent transparent
 
   & div:nth-child(1)
     animation-delay: -0.45s
@@ -231,24 +264,57 @@ select#filter-by-author
 
 .footer
   background: #140d4e
-  padding: 100px 0
-  margin-top: 100px
+  padding: 80px 0
+  margin-top: 80px
+
+  .contacts
+    display: flex
+    flex-direction: row
+
+  .subscribe
+    color: white
+    display: flex
+    flex-direction: column
+    input
+      padding: 6px
+      padding-right: 40px
+      font-size: 14px
+      margin-top: 2px
+    .subscribe-button
+      font-size: 14px
+      margin-top: 10px
+      padding-left: 38px
+      @extend .button
 
   .wrapper
     display: flex
     justify-content: space-between
     min-height: auto
 
-    .support-project
-      background: #fafa3b
-      padding: 8px 20px
-      border-radius: 4px
-      color: #333
-      font-family: Lora,sans-serif
+    .footer-end-block
+      display: flex
+      flex-direction: column
       font-weight: 600
-      transition: all .3s ease
-      &:hover
-        background: #cccc57
+
+      padding-top: 15px
+      a
+        text-decoration: underline
+        margin-bottom: 10px
+        transition: all .3s ease
+        &:hover
+          color: #a2acdf
+
+      .support-project
+        text-decoration: none
+        background: #fafa3b
+        padding: 8px 20px
+        color: #333
+        font-size: 14px
+        text-transform: uppercase
+        font-weight: 600
+        &:hover
+          color: #333
+          background: #dada35
 
     a
       color: white
@@ -258,8 +324,12 @@ select#filter-by-author
       font-size: 30px
       transition: all .3s ease
       &:hover
-        color: #fafa3b
+        color: #a2acdf
         cursor: pointer
+
+.page-contact
+  color: white
+  margin-top: 80px
 
 // contacts
 .contacts
@@ -268,11 +338,12 @@ select#filter-by-author
   padding-top: 20px
   padding-left: 20px
   padding-bottom: 20px
+
   a
-    color: #194470
+    color: white
     font-size: 20px
     transition: all .3s ease
     &:hover
-      color: lighten(#194470, 10%)
+      color: darken(white, 20%)
 
 @import "media" // Всегда в конце
