--- a/views/aphorisms.hbs
+++ b/views/aphorisms.hbs
@@ -10,7 +10,6 @@
   <div class="wrapper">
     {{>header}}
     <h1>Мудрость афоризмов</h1>
-    <br>
     <div class="header-text">
       <p>Aфоризм - это житейская мудрость, краткая, емкая, законченная
         мысль, которая при должном употреблении может
@@ -33,8 +32,8 @@
           <div></div>
           <div></div>
         </div>
-        {{#each aphorisms}}
-        <div style="{{aphorismsHelper this.body}}" class="aphorisms-item">
+        {{#each aphorisms as |item index| }}
+        <div class="aphorisms-item">
           <div class="aphorisms-tags">
             {{#each this.tags}}
             <span>{{this.name}}</span>
@@ -48,11 +47,10 @@
               <span>{{this.author}}</span>
             </div>
             <div class="aphorisms-icons">
-              <i id="fa-clone" class="fa fa-clone" aria-hidden="true"></i>
-              <i id="fa-share" class="fa fa-share-alt" aria-hidden="true"></i>
+              <i name={{index}} id="fa-clone" class="fa fa-clone" aria-hidden="true"></i>
+              <i name={{index}} id="fa-share" class="fa fa-share-alt" aria-hidden="true"></i>
             </div>
           </div>
-
         </div>
         {{/each}}
         {{!-- <div class="aphorisms-all">
