--- a/views/developmentPlan.hbs
+++ b/views/developmentPlan.hbs
@@ -11,7 +11,7 @@
     {{>header}}
 
     <div class="half-container">
-      <h1>Благодарим вас за помощь проекту. Вы внесли ценный вклад в общее дело!</h1>
+      <h1>План развития проекта.</h1>
     </div>
 
   </div>
