--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,17 +1,29 @@
 <footer class="footer">
   <div class="wrapper">
 
-    <a href="https://vk.com/medonomator">
-      <i class="fa fa-vk" aria-hidden="true"></i>
-    </a>
-    <a href="tg://medonomator">
-      <i class="fa fa-telegram" aria-hidden="true"></i>
-    </a>
+    <div class="contacts">
+      <a href="https://vk.com/medonomator">
+        <i class="fa fa-vk" aria-hidden="true"></i>
+      </a>
+      <a href="tg://medonomator">
+        <i class="fa fa-telegram" aria-hidden="true"></i>
+      </a>
+    </div>
 
-    <a class="support-project" href="/contacts">Поддержать проект</a>
+    <div class="subscribe">
+      <p>Подписаться на новости</p>
+      <input type="text" placeholder="Ваш email">
+      <input class="subscribe-button" type="button" value="Подписаться">
+    </div>
+
+    <div class="footer-end-block">
+      <a href="/development-plan">План развития проекта</a>
+      <a class="support-project" href="/contacts">Поддержать проект</a>
+    </div>
+
   </div>
 </footer>
 
 <script src="{{path}}libs/jquery/jquery.min.js"></script>
-<script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.js"></script>
+<script src='https://cdn.jsdelivr.net/gh/colxi/getEventListeners/src/getEventListeners.min.js'></script>
 <script src="{{path}}js/common.js"></script>
