--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -20,4 +20,8 @@
       <li><a href="/contacts">Контакты</a></li>
     </ul>
   </div>
+
+  <div class="top-arrow">
+    <img src="{{path}}/img/scrollToTop.png" alt="">
+  </div>
 </div>
