--- a/views/techniques.hbs
+++ b/views/techniques.hbs
@@ -6,11 +6,12 @@
 </head>
 
 <body>
+  <div class="bg"></div>
   <div class="wrapper">
     {{>header}}
 
-    <div class="about">
-      <p>В разработке...</p>
+    <div class="half-container">
+      <h1>В разработке...</h1>
     </div>
 
   </div>
