--- a/static/sass/main.sass
+++ b/static/sass/main.sass
@@ -97,11 +97,16 @@ select#filter-by-author
   &:hover
     background: darken(#3753E7, 5%)
 
+// .top-arrow
+//   img
+//     width: 70px
+
 /*** header  ***/
 .header
   display: flex
   justify-content: space-between
   padding-top: 25px
+  position: relative
 
   .logo
     width: 48px
