--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -21,7 +21,7 @@
     </ul>
   </div>
 
-  <div class="top-arrow">
-    <img src="{{path}}/img/scrollToTop.png" alt="">
-  </div>
+  {{!-- <div class="top-arrow">
+    <img src="{{path}}/img/scrollToTop.png" alt="alt">
+  </div> --}}
 </div>
