--- a/static/sass/main.sass
+++ b/static/sass/main.sass
@@ -97,6 +97,20 @@ select#filter-by-author
   &:hover
     background: darken(#3753E7, 5%)
 
+.more-button
+  @extend .button
+  width: 157px
+  height: 40px
+  margin-left: 84%
+  display: block
+  padding-top: 8px
+  padding-left: 43px
+  font-size: 15px
+  display: block
+  font-size: 15px
+  &:hover
+    color: white
+
 // .top-arrow
 //   img
 //     width: 70px
@@ -145,6 +159,12 @@ select#filter-by-author
   margin-top: 150px
 
 /*** aphorisms  ***/
+
+.aphorisms-container-main
+  margin-top: 70px
+  h2
+    padding-bottom: 40px
+
 .aphorisms-container
   position: relative
 
