added styles for mobile version

--- a/static/sass/main.sass
+++ b/static/sass/main.sass
@@ -325,6 +325,7 @@ select#filter-by-author
       a
         text-decoration: underline
         margin-bottom: 10px
+        font-size: 17px
         transition: all .3s ease
         &:hover
           color: #a2acdf
@@ -363,7 +364,6 @@ select#filter-by-author
   padding-top: 20px
   padding-left: 20px
   padding-bottom: 20px
-
   a
     color: white
     font-size: 20px
