--- a/static/sass/_libs.sass
+++ b/static/sass/_libs.sass
@@ -1,5 +1,5 @@
 @import "vars"
-  
+
 *
 	-webkit-box-sizing: border-box
 	-moz-box-sizing: border-box
@@ -10,7 +10,6 @@
 		-webkit-box-sizing: border-box
 		-moz-box-sizing: border-box
 		box-sizing: border-box
-
 
 *::-webkit-input-placeholder
 	color: #666
@@ -39,7 +38,6 @@ body input:required:valid,
 body textarea:required:valid
 	color: #666
 
-  
 body
 	font-size: 16px
 	min-width: 320px
@@ -50,26 +48,26 @@ body
 	font-family: 'PTSansCaption', sans-serif
 
   // hamburger
-.hamburger 
+.hamburger
 	display: none
 	cursor: pointer
 
-.bar1, .bar2, .bar3 
+.bar1, .bar2, .bar3
 	width: 40px
 	height: 5px
-	background-color: $accent
+	background-color: white
 	margin: 3px 0
 	transition: 0.4s
 	border-radius: 5em
 	align-self: center
 
-.change .bar1 
+.change .bar1
 	-webkit-transform: rotate(-45deg) translate(-9px, 6px)
 	transform: rotate(-45deg) translate(-9px, 6px)
 
-.change .bar2 
+.change .bar2
 	opacity: 0
 
-.change .bar3 
+.change .bar3
 	-webkit-transform: rotate(45deg) translate(-8px, -8px)
 	transform: rotate(45deg) translate(-8px, -8px)
