--- a/views/aphorisms.hbs
+++ b/views/aphorisms.hbs
@@ -85,7 +85,7 @@
           </select>
         </div>
 
-        <div>
+        <div class="shuffle-button-wrapper">
           <input type="button" class="shuffle-button" value="Перемешать">
         </div>
       </div>
