--- a/views/contacts.hbs
+++ b/views/contacts.hbs
@@ -10,7 +10,7 @@
   <div class="wrapper">
     {{>header}}
 
-    <h1>Если у вас есть идеи по улучшению данного ресурса или организации нового проекта, напишите мне пожалуйста. Это
+    <h1 class="h1-contacts">Если у вас есть идеи по улучшению данного ресурса или организации нового проекта, напишите мне пожалуйста. Это
       будет ценным вкладом с вашей
       стороны.</h1>
 
