--- a/static/sass/_media.sass
+++ b/static/sass/_media.sass
@@ -80,11 +80,20 @@
       margin-bottom: 20px
       margin-top: 20px
 
+  .h1-contacts
+    font-size: 30px
+
 @media only screen and (max-width: 560px)
  //
 @media only screen and (max-width : 480px)
-  // header
+  .h1-contacts
+    font-size: 26px
 
+  .bg
+    height: 155vh
+
+  .filter-block
+    width: 94%
 @media only screen and (max-width : 320px)
  /**/
 
