--- a/views/aphorisms.hbs
+++ b/views/aphorisms.hbs
@@ -53,9 +53,11 @@
           </div>
         </div>
         {{/each}}
-        {{!-- <div class="aphorisms-all">
-        <a href="#">Читать все афоризмы...</a>
-      </div> --}}
+        <input type="button" class="more-button more-button-aphorism" value="Показать еще 100"></input>
+
+        <div class="top-arrow">
+          <img src="{{path}}/img/scrollToTop.png" alt="alt">
+        </div>
       </section>
 
       <div class="filter-block">
