--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -24,6 +24,4 @@
   </div>
 </footer>
 
-<script src="{{path}}libs/jquery/jquery.min.js"></script>
-<script src='https://cdn.jsdelivr.net/gh/colxi/getEventListeners/src/getEventListeners.min.js'></script>
-<script src="{{path}}js/common.js"></script>
+<script src="{{path}}js/scripts.min.js"></script>
