add route for main data

--- a/static/sass/_media.sass
+++ b/static/sass/_media.sass
@@ -23,6 +23,8 @@
 
 @media only screen and (max-width : 768px)
 
+  .h1-contacts
+    width: 100%
   .main-menu
     display: none
 
@@ -90,7 +92,7 @@
     font-size: 26px
 
   .bg
-    height: 185vh
+    height: 220vh
 
   .filter-block
     width: 94%
