--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -15,8 +15,8 @@
     <ul>
       <li><a href="/">Главная</a></li>
       <li><a href="/aphorisms">Афоризмы</a></li>
-      <li><a href="/notes">Аффирмации</a></li>
-      <li><a href="/techniques">Техники</a></li>
+      <li><a href="/affirmation">Аффирмации</a></li>
+      <li><a href="/materials">Материалы</a></li>
       <li><a href="/contacts">Контакты</a></li>
     </ul>
   </div>
