--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,21 +9,33 @@
   <div class="bg"></div>
   <div class="wrapper">
     {{>header}}
-    <h1>Личностная трансформация</h1>
+    <h1>
+      {{#if mainPage.headerH1}}
+      {{mainPage.headerH1}}
+      {{else}}
+      Личностная трансформация
+      {{/if}}
+    </h1>
+
     <div class="header-text">
-      <p>Если ты жаждешь глубинной трансформации, этот ресурс поможет тебе. Раз ты здесь, значит, готов к переменам и
+      {{#if mainPage.headerText}}
+      <p>{{mainPage.headerText}}</p>
+      {{else}}
+      <p>Если ты жаждешь глубинной трансформации, этот ресурс поможет тебе. Раз ты здесь, значит,
+        готов к переменам и
         открыт для нового.
         Рост счастья и состояние наполненности от простого бытия меняет даже мрачную реальность. Сама возможность Быть
         уже является большим чудом и счастьем. Постигшему эту истину раскрывается мир неограниченных возможностей.
-        Хоть на секунду притормози и пристально посмотри на того, кто задыхается в серой реальности, кто не находит себя
-        в этом мире. Может, это вовсе не ты? Давай вместе попробуем заглянуть внутрь измученной оболочки, стать ближе к
+        Хоть на секунду притормози и пристально посмотри на того, кто задыхается в серой реальности, кто не находит
+        себя
+        в этом мире. Может, это вовсе не ты? Давай вместе попробуем заглянуть внутрь измученной оболочки, стать ближе
+        к
         лучшей версии тебя.
         В каждом разделе мы собираем то, что способно изменить любого, кто к этому стремится. Дать ответ на нужный
         вопрос, заставить задуматься или просто вдохновить на новый день.
-        Читай, размышляй и используй то, что тебе подойдет. Удачи!
-      </p>
+        Читай, размышляй и используй то, что тебе подойдет. Удачи!</p>
+      {{/if}}
     </div>
-
 
     <section class="aphorisms-container aphorisms-container-main">
       {{!-- <h2>Афоризмы</h2> --}}
@@ -52,7 +64,6 @@
 
       <a href="/aphorisms" type="button" class="more-button">Больше...</a>
     </section>
-    {{!-- <h2>Аффирмации</h2> --}}
   </div>
   {{>footer}}
 </body>
