--- a/static/sass/main.sass
+++ b/static/sass/main.sass
@@ -213,6 +213,7 @@ select#filter-by-author
       font-size: 16px
       line-height: 26px
       padding-top: 20px
+      color: #333
 
   &-tags
     span
