--- a/views/developmentPlan.hbs
+++ b/views/developmentPlan.hbs
@@ -10,8 +10,11 @@
   <div class="wrapper">
     {{>header}}
 
-    <div class="half-container">
+    <div class="half-container development-page">
       <h1>План развития проекта.</h1>
+      <p>Проект стремиться давать светлый и чистый настрой на каждый день.
+        На данном этапе основная задача это наращивание корпуса афоризмов, афирмаций и материалов только самых отборных
+        и мощных. </p>
     </div>
 
   </div>
