--- a/views/index.hbs
+++ b/views/index.hbs
@@ -62,7 +62,9 @@
       </div>
       {{/each}}
 
-      <a href="/aphorisms" type="button" class="more-button">Больше...</a>
+      <div class="more-button-container">
+        <a href="/aphorisms" type="button" class="button more-button">Больше...</a>
+      </div>
     </section>
   </div>
   {{>footer}}
