--- a/static/sass/_media.sass
+++ b/static/sass/_media.sass
@@ -17,9 +17,25 @@
   .bg
     height: 105vh
 
+  .aphorisms-container-main
+    .aphorisms-item
+      margin-left: 10px
+
 @media only screen and (max-width : 992px)
   .bg
-    height: 115vh
+    height: 130vh
+
+  .aphorisms-container-main
+    margin-top: 70px
+    h2
+      padding-bottom: 40px
+    .aphorisms-item
+      margin-right: 10px
+      margin-left: 10px
+
+  .more-button-container
+    margin-right: 10px
+    margin-top: 20px
 
 @media only screen and (max-width : 768px)
 
