--- a/views/materials.hbs
+++ b/views/materials.hbs
@@ -10,8 +10,9 @@
   <div class="wrapper">
     {{>header}}
 
-    <div class="half-container">
-      <h1>В разработке...</h1>
+    <div class="half-container material-page">
+      <p>Данный раздел находится в активной разработке. Здесь мы вместе с вами концентрируем одни из самых сильных
+        направлений и метериалы, которые реально трансформируют при должном употреблении.</p>
     </div>
 
   </div>
