add developmentPlanPage to admin

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -18,10 +18,11 @@
     </h1>
 
     <div class="header-text">
-      {{#if mainPage.headerText}}
-      <p>{{mainPage.headerText}}</p>
-      {{else}}
-      <p>Если ты жаждешь глубинной трансформации, этот ресурс поможет тебе. Раз ты здесь, значит,
+      <p>
+        {{#if mainPage.headerText}}
+        {{mainPage.headerText}}
+        {{else}}
+        Если ты жаждешь глубинной трансформации, этот ресурс поможет тебе. Раз ты здесь, значит,
         готов к переменам и
         открыт для нового.
         Рост счастья и состояние наполненности от простого бытия меняет даже мрачную реальность. Сама возможность Быть
@@ -33,8 +34,9 @@
         лучшей версии тебя.
         В каждом разделе мы собираем то, что способно изменить любого, кто к этому стремится. Дать ответ на нужный
         вопрос, заставить задуматься или просто вдохновить на новый день.
-        Читай, размышляй и используй то, что тебе подойдет. Удачи!</p>
-      {{/if}}
+        Читай, размышляй и используй то, что тебе подойдет. Удачи!
+        {{/if}}
+      </p>
     </div>
 
     <section class="aphorisms-container aphorisms-container-main">
