--- a/views/materials.hbs
+++ b/views/materials.hbs
@@ -10,11 +10,25 @@
   <div class="wrapper">
     {{>header}}
 
-    <div class="half-container material-page">
-      <p>Данный раздел находится в активной разработке. Здесь мы вместе с вами концентрируем одни из самых сильных
-        направлений и метериалы, которые реально трансформируют при должном употреблении.</p>
-    </div>
 
+    <h1>
+      {{#if materialPage.headerH1}}
+      {{materialPage.headerH1}}
+      {{else}}
+      Только лучшее
+      {{/if}}
+    </h1>
+
+    <div class="header-text">
+      <p>
+        {{#if materialPage.headerText}}
+        {{materialPage.headerText}}
+        {{else}}
+        Данный раздел находится в активной разработке. Здесь мы вместе с вами концентрируем одни из самых сильных
+        направлений и метериалы, которые реально трансформируют при должном употреблении.
+        {{/if}}
+      </p>
+    </div>
   </div>
   {{>footer}}
 </body>
