feature: subscribe form

--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -12,7 +12,7 @@
 
     <div class="subscribe">
       <p>Подписаться на новости</p>
-      <input type="text" placeholder="Ваш email">
+      <input class="subscribe-input" type="text" placeholder="Ваш email">
       <input class="subscribe-button" type="button" value="Подписаться">
     </div>
 
