--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -21,4 +21,9 @@
     </ul>
   </div>
 
+  <div class="thanks-for-subscription">
+    <p>Вы подписаны на новости</p>
+    <input type="button" value="Ок" class="success-subscribe-button">
+  </div>
+
 </div>
