--- a/views/aphorisms.hbs
+++ b/views/aphorisms.hbs
@@ -69,7 +69,7 @@
           </div>
         </div>
         {{/each}}
-        <input type="button" class="more-button more-button-aphorism" value="Показать еще 100"></input>
+        <input type="button" class="button more-button-aphorism" value="Показать еще 100"></input>
 
         <div class="top-arrow">
           <img src="{{path}}/img/scrollToTop.png" alt="alt">
