--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
 
-<title>FamilyZorins</title>
+<title>Spiritual Evolution</title>
 <meta name="description" content="">
 
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
