add change category in admin panel

--- a/views/developmentPlan.hbs
+++ b/views/developmentPlan.hbs
@@ -24,9 +24,9 @@
         {{developmentPlanPage.headerText}}
         {{else}}
         Проект стремиться давать светлый и чистый настрой на каждый день.
-        На данном этапе основная задача это наращивание корпуса афоризмов, афирмаций и материалов только самых
+        {{!-- На данном этапе основная задача это наращивание корпуса афоризмов, афирмаций и материалов только самых
         отборных
-        и мощных.
+        и мощных. --}}
         {{/if}}
       </p>
     </div>
