--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -18,6 +18,7 @@
 <meta name="msapplication-navbutton-color" content="#000">
 <!-- iOS Safari -->
 <meta name="apple-mobile-web-app-status-bar-style" content="#000">
+<link rel="shortcut icon" type="image/png" href="{{path}}img/favicon/favicon.ico">
 <link rel="stylesheet" href="{{path}}css/main.min.css">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 <!-- Yandex.Metrika counter -->
