--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -10,15 +10,15 @@
       </a>
     </div>
 
-    <div class="subscribe">
+    {{!-- <div class="subscribe">
       <p>Подписаться на новости</p>
       <p class="error-element"></p>
       <input class="subscribe-input" type="text" placeholder="Ваш email">
       <input class="subscribe-button" type="button" value="Подписаться">
-    </div>
+    </div> --}}
 
     <div class="footer-end-block">
-      <a href="/development-plan">План развития проекта</a>
+      {{!-- <a href="/development-plan">План развития проекта</a>  --}}
       <a class="support-project" href="/contacts">Поддержать проект</a>
     </div>
 
