fix several bugs

--- a/static/sass/_media.sass
+++ b/static/sass/_media.sass
@@ -101,9 +101,16 @@
   .h1-contacts
     font-size: 30px
 
-@media only screen and (max-width: 560px)
- //
+  .top-arrow
+    right: calc(50% - 265px)
+
+@media only screen and (max-width : 560px)
+  .top-arrow
+    right: calc(50% - 200px)!important
+
 @media only screen and (max-width : 480px)
+  .top-arrow
+    right: calc(50% - 150px)!important
   .h1-contacts
     font-size: 26px
 
