--- a/static/sass/main.sass
+++ b/static/sass/main.sass
@@ -118,16 +118,20 @@ select#filter-by-author
   &:hover
     color: white
 
+.more-button-wrapper
+  display: flex
+  justify-content: flex-end
+
 .more-button-aphorism
 
   width: auto
   padding: 0 30px
   height: 40px
-  margin-left: 72%
   display: block
   font-size: 15px
   display: block
   font-size: 15px
+  margin-right: 30px
   &:hover
     color: white
 
