--- a/views/aphorisms.hbs
+++ b/views/aphorisms.hbs
@@ -69,7 +69,9 @@
           </div>
         </div>
         {{/each}}
-        <input type="button" class="button more-button-aphorism" value="Показать еще 100"></input>
+        <div class="more-button-wrapper">
+          <input type="button" class="button more-button-aphorism" value="Показать еще 100"></input>
+        </div>
 
         <div class="top-arrow">
           <img src="{{path}}/img/scrollToTop.png" alt="alt">
