add materials CRUD

--- a/static/sass/_media.sass
+++ b/static/sass/_media.sass
@@ -39,6 +39,9 @@
 
 @media only screen and (max-width : 768px)
 
+  .more-button-aphorism
+    margin-right: 30px
+
   .h1-contacts
     width: 100%
   .main-menu
