--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -8,14 +8,17 @@
       <a href="tg://medonomator">
         <i class="fa fa-telegram" aria-hidden="true"></i>
       </a>
+      <a href="https://github.com/medonomator/insight">
+        <i class="fa fa-github" aria-hidden="true"></i>
+      </a>
     </div>
 
-    {{!-- <div class="subscribe">
+    <div class="subscribe">
       <p>Подписаться на новости</p>
       <p class="error-element"></p>
       <input class="subscribe-input" type="text" placeholder="Ваш email">
       <input class="subscribe-button" type="button" value="Подписаться">
-    </div> --}}
+    </div>
 
     <div class="footer-end-block">
       {{!-- <a href="/development-plan">План развития проекта</a>  --}}
