--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -13,10 +13,10 @@
 
   <div class="main-menu">
     <ul>
-      {{!-- <li><a href="/">Главная</a></li>
-      <li><a href="/aphorisms">Афоризмы</a></li>
-      <li><a href="/affirmation">Аффирмации</a></li>
-      <li><a href="/materials">Материалы</a></li> --}}
+      <li><a href="/">Главная</a></li>
+      {{!-- <li><a href="/aphorisms">Афоризмы</a></li>
+      <li><a href="/affirmation">Аффирмации</a></li> --}}
+      <li><a href="/materials">Материалы</a></li>
       <li><a href="/contacts">Контакты</a></li>
     </ul>
   </div>
