--- a/views/contacts.hbs
+++ b/views/contacts.hbs
@@ -10,7 +10,8 @@
   <div class="wrapper">
     {{>header}}
 
-    <h1 class="h1-contacts">Если у вас есть идеи по улучшению данного ресурса или организации нового проекта, напишите мне пожалуйста. Это
+    <h1 class="h1-contacts">Если у вас есть идеи по улучшению данного ресурса или организации нового проекта, напишите
+      мне пожалуйста. Это
       будет ценным вкладом с вашей
       стороны.</h1>
 
@@ -28,7 +29,7 @@
     </div>
 
     <iframe
-      src="https://money.yandex.ru/quickpay/shop-widget?writer=seller&targets=%D0%9F%D0%BE%D0%B4%D0%B4%D0%B5%D1%80%D0%B6%D0%B0%D1%82%D1%8C%20%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82&targets-hint=&default-sum=&button-text=14&payment-type-choice=on&mobile-payment-type-choice=on&hint=&successURL=http%3A%2F%2F134.209.163.196%2Fgratitude&quickpay=shop&account=410014038527087"
+      src="https://money.yandex.ru/quickpay/shop-widget?writer=seller&targets=%D0%9F%D0%BE%D0%B4%D0%B4%D0%B5%D1%80%D0%B6%D0%B0%D1%82%D1%8C%20%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82&targets-hint=&default-sum=&button-text=14&payment-type-choice=on&mobile-payment-type-choice=on&hint=&successURL=http%3A%2F%2F83.166.242.213%2Fgratitude&quickpay=shop&account=410014038527087"
       width="100%" height="222" frameborder="0" allowtransparency="true" scrolling="no"></iframe>
 
   </div>
