add template for materials

--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -16,7 +16,7 @@
     <div class="subscribe">
       <p>Подписаться на новости</p>
       <p class="error-element"></p>
-      <input class="subscribe-input" type="text" placeholder="Ваш email">
+      <input class="subscribe-input" dir="auto" type="email" placeholder="Ваш email" autocomplete="on">
       <input class="subscribe-button" type="button" value="Подписаться">
     </div>
 
