add share aphorism

--- a/views/404.hbs
+++ b/views/404.hbs
@@ -2,16 +2,16 @@
 <html lang="ru">
 
 <head>
+  <title>цитаты великих людей</title>
   {{>head}}
 </head>
 
 <body>
+  <div class="bg"></div>
   <div class="wrapper">
     {{>header}}
 
-    <div class="about">
-      <p>Страница не найдена</p>
-    </div>
+    <h1 style="text-align: center;">Страница не найдена</h1>
 
   </div>
   {{>footer}}
