--- a/views/aphorisms.hbs
+++ b/views/aphorisms.hbs
@@ -2,6 +2,7 @@
 <html lang="ru">
 
 <head>
+  <title>цитаты великих людей</title>
   {{>head}}
 </head>
 
@@ -69,7 +70,8 @@
             </div>
             <div class="aphorisms-icons">
               <i name={{index}} id="fa-clone" class="fa fa-clone" aria-hidden="true"></i>
-              <i name={{index}} id="fa-share" class="fa fa-share-alt" aria-hidden="true"></i>
+              <i onclick="Share.vkontakte('http://spiritual-evolution.ru/aphorism/{{this._id}}','Хороший Афоризм','IMG_PATH','DESC')"
+                name={{index}} id="fa-share" class="fa fa-share-alt" aria-hidden="true"></i>
             </div>
           </div>
         </div>
@@ -117,5 +119,21 @@
   </div>
   {{>footer}}
 </body>
+<script type="text/javascript">
+  Share = {
+    vkontakte: function (purl, ptitle, pimg, text) {
+      url = 'http://vkontakte.ru/share.php?';
+      url += 'url=' + encodeURIComponent(purl);
+      url += '&title=' + encodeURIComponent(ptitle);
+      url += '&description=' + encodeURIComponent(text);
+      url += '&image=' + encodeURIComponent(pimg);
+      url += '&noparse=true';
+      Share.popup(url);
+    },
+    popup: function (url) {
+      window.open(url, '', 'toolbar=0,status=0,width=626,height=436');
+    }
+  };
+</script>
 
 </html>
