--- a/views/materials.hbs
+++ b/views/materials.hbs
@@ -2,6 +2,7 @@
 <html lang="ru">
 
 <head>
+  <title>цитаты великих людей</title>
   {{>head}}
 </head>
 
@@ -81,13 +82,11 @@
           </div>
         </div>
         {{/each}}
-
       </section>
-
     </div>
-
   </div>
   {{>footer}}
+  <a href="tg://resolve?domain=<USERNAME>">Test share Telegram</a>
 </body>
 
 </html>
