--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -1,8 +1,7 @@
 <meta charset="utf-8">
 
-<title>Spiritual Evolution</title>
-<meta name="description" content="">
-
+<meta name="description" content="цитаты великих людей">
+<meta name="keywords" content="цитаты,афоризмы,высказывания">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
@@ -21,6 +20,7 @@
 <link rel="shortcut icon" type="image/png" href="{{path}}img/favicon/favicon.ico">
 <link rel="stylesheet" href="{{path}}css/main.min.css">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+<script type="text/javascript" src="https://vk.com/js/api/share.js?93" charset="windows-1251"></script>
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript">
   (function (m, e, t, r, i, k, a) {
