--- a/views/dynamicAphorism.hbs
+++ b/views/dynamicAphorism.hbs
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-  <title>цитаты великих людей</title>
+  <title>{{this.name}}</title>
   {{>head}}
 </head>
 
@@ -10,8 +10,6 @@
   <div class="bg"></div>
   <div class="wrapper">
     {{>header}}
-
-    <h1>Мудрость афоризмов</h1>
 
     <div class="regular-page" style="margin-bottom: 250px;">
       <section class="aphorisms-container">
