--- a/views/materials.hbs
+++ b/views/materials.hbs
@@ -25,8 +25,8 @@
         {{#if materialPage.headerText}}
         {{materialPage.headerText}}
         {{else}}
-        Данный раздел находится в активной разработке. Здесь мы вместе с вами концентрируем одни из самых сильных
-        направлений и метериалы, которые реально трансформируют при должном употреблении.
+        Здесь собираются разные полезные материалы и одни из самых сильных направлений, которые трансформировали меня в
+        свое время и продолжают это делать.
         {{/if}}
       </p>
     </div>
